testsuite/tests/parser/should_fail/T17162.stderr

T17162.hs:7:21: error:
    Illegal bang-pattern
    !enc
    Suggested fix: Perhaps you intended to use BangPatterns
